# SpringEdge

./: .gitignore  README.md  edge.py  pyproject.toml  score_performance.py
examples/: compute_features.py  market_regime_report.py  score_performance_features.py
src/intelligence/: __init__.py  sp500_tickers.py
src/springedge/: __init__.py  db.py  edge.py  features.py  indicators.py  layers.py  logging_utils.py  regime.py  schemas.py  score_performance.py  selection.py
src/springedge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_db.py  test_db_layers_and_regime.py  test_edge_cli_selection.py  test_edge_cli_selection_flags.py  test_edge_end_to_end.py  test_features.py  test_intelligence_imports.py  test_logging_utils.py  test_schemas_registry.py  test_score_performance.py  test_selection.py  test_signal_layer_policy.py
