[project]
name = "springedge"
version = "0.1.0"
description = "Edge system feature generation (regime/structural/tactical/risk + forward returns)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
