[project]
name = "springedge"
version = "0.1.0"
description = "Edge system feature generation (regime/structural/tactical/risk + forward returns)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.9.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
  "src/springedge.egg-info",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
